# SightPlusPlus-ComputerVision

./: .gitignore  CMakeLists.txt  NOTICE  README.md  rough.cpp
Intel_SighPP_CMake/: CMakeLists.txt
Intel_SighPP_CMake/Intel_SighPP_CMake/: CMakeLists.txt  cv-helpers.hpp
Intel_SighPP_CMake/Intel_SighPP_CMake/src/: CMakeLists.txt  Intel_Sight_++.cpp  README.md  classification_result.hpp  service_controller.cpp  service_controller.hpp
Intel_SighPP_CMake/Intel_SighPP_CMake/src/interface_controller/: api_user_interface.hpp
Intel_SighPP_CMake/Intel_SighPP_CMake/src/ml_lib/: caffe_impl.cpp  inference_controller.cpp  inference_controller.hpp  ml_interface.hpp  object_tracking.cpp  object_tracking.hpp  types.hpp
Intel_SighPP_CMake/Intel_SighPP_CMake/src/service_manager/: CameraInput.cpp  CameraInput.h
Intel_SighPP_CMake/Intel_SighPP_CMake/tests/: mock_ml_model_impl.cpp  test_prio.cpp
Intel_SighPP_CMake/src/: service_controller.hpp
Intel_SighPP_CMake/src/interface_controller/: README.md  api_impl_websocket.cpp
Intel_SighPP_CMake/src/ml_lib/: README.md  object_tracking.cpp  object_tracking.hpp
Intel_SighPP_CMake/tests/: test_classification_result.cpp
SightPlusPlus_CMake/: cv-helpers.hpp
SightPlusPlus_CMake/src/: CMakeLists.txt  Intel_Sight_++.cpp  config.hpp  helpers.hpp  service_controller.cpp  service_controller.hpp  setup_helper.hpp
SightPlusPlus_CMake/src/interface_controller/: api_controller.cpp  api_controller.hpp  api_impl_websocket.cpp  api_user_interface.hpp  output_stream_controller.cpp  output_stream_controller.hpp
SightPlusPlus_CMake/src/ml_lib/: inference_controller.cpp  inference_controller.hpp  object_tracking.cpp  object_tracking.hpp
SightPlusPlus_CMake/tests/: README.md  test.cpp  test_ml_controller.cpp
src/: CMakeLists.txt
src/interface_controller/: api_controller.hpp  output_stream_controller.cpp  output_stream_controller.hpp
src/ml_lib/: types.hpp
tests/: CMakeLists.txt
